# wrap-esm-lambda

./: .gitattributes  .gitignore  .prettierignore  Cargo.toml  LICENSE  Presentation.md  README.md  RustPresentation.md  browser.js  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wrap-esm-lambda.wasi-browser.js  wrap-esm-lambda.wasi.cjs
.github/workflows/: CI.yml  release.yml
__test__/: acorn-engine.spec.ts  aws.spec.ts  bundlers.spec.ts  comment-preservation.spec.ts  engine-parity.spec.ts  frameworks.spec.ts  http-route.spec.ts  hybrid.spec.ts  iitm-compare.spec.ts  index.spec.ts  orchestrion-compare.spec.ts  patch.spec.ts  range.spec.ts  tap-shapes.spec.ts
__test__/fixtures/: bundle-driver.mjs
__test__/fixtures/aws/: app.mjs  aws.config.ts
__test__/fixtures/comments/: app-comments.mjs  app-webpack.mjs  wrap.config.comments.mjs
__test__/fixtures/hybrid/: handler.mjs  main.mjs  wrap-runtime.mjs  wrap.config.mjs
__test__/fixtures/patch/: app-builtin.mjs  app-frameworks.cjs  (+15 more)
benchmark/: acorn-sourcemap.ts  acorn-transform.ts  babel-transform.ts  bench.ts  make-transform-chart.ts  orchestrion-transform.ts  oxc-sourcemap.ts  patch-bench.ts  regex-transform.ts  replace-transform.ts  ts-fixture.ts  tsconfig.json
docs/: benchmarks.md  comparisons.md  history.md  real-packages.md  serverless.md  source-maps.md
examples/express-route/: README.md  app.mjs  package.json  wrap.config.mjs
hooks/: async-hooks-babel-one-file.mjs  async-hooks-babel.mjs  async-hooks-oxc.mjs  async-hooks-regex.mjs  async-hooks-replace.mjs  benchTable.md  bench_hooks.sh  bench_max_rss.sh  handler.mjs  httpload.cjs  make-chart.mjs  oxc-frida.cjs  register-async-hooks-babel.mjs  register-async-hooks-oxc.mjs  register-async-hooks-regex.mjs  runtime.mjs  swc-wrapper.cjs  sync-hooks-acorn.mjs  sync-hooks-babel.mjs  sync-hooks-empty.mjs  sync-hooks-orchestrion-tracing.mjs  sync-hooks-orchestrion.mjs  sync-hooks-oxc-frida.mjs  sync-hooks-oxc-wasm.mjs  sync-hooks-oxc.mjs  sync-hooks-regex.mjs  sync-hooks-swc.mjs  update-bench-table.mjs  wrap.mjs
hooks/interplay-matrix/: README.md  matrix.md  run.mjs
hooks/sourcemap-demo/: handler-throws.mjs  run.sh  runtime-throws.mjs  sync-hooks-oxc-nomap.mjs  sync-hooks-oxc-sourcemap.mjs  wrap-noop.mjs
hooks/sourcemap-ts-demo/: handler.ts  run.sh  runtime-throws-native.mjs  runtime-throws.mjs  sync-hooks-oxc-ts-native.mjs  sync-hooks-oxc-ts-nochain.mjs  sync-hooks-oxc-ts-rust.mjs  sync-hooks-oxc-ts.mjs
hooks_bench/: bench_hooks.sh  register-async-hooks-replace.mjs  sync-hooks-replace.mjs
promises/: promiseplay.mjs
src/: detours.rs  lib.rs  no-detours.rs  transform.rs
swc-plugin-esm-lambda/: Cargo.toml  package.json
swc-plugin-esm-lambda/.cargo/: config.toml
swc-plugin-esm-lambda/src/: lib.rs
(+30 files in other folders)
