
[package]
authors = ["Filip Kunc <kunc.filip@gmail.com>"]
edition = "2024"
name = "wrap_esm_lambda"
version = "0.1.3"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.2.4"
napi-derive = "3.2.4"
oxc = "0.82.2"
oxc_allocator = "0.82.2"
oxc_ast = "0.82.2"
oxc_codegen = "0.82.2"
oxc_parser = "0.82.2"
oxc_semantic = "0.82.2"
oxc_span = "0.82.2"
oxc_transformer = "0.82.2"
oxc_traverse = "0.82.2"

[features]
default = ["frida"]
frida = ["dep:ctor", "dep:frida", "dep:frida-gum", "dep:lazy_static", "dep:libc", "dep:libuv-sys2"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
ctor = { version = "0.5.0", optional = true }
frida = { version = "0.17.0", features = [ "auto-download" ], optional = true }
frida-gum = { version = "0.17.0", features = ["auto-download"], optional = true }
lazy_static = { version = "1.5.0", optional = true }
libc = { version = "0.2.175", optional = true }
libuv-sys2 = { version = "1.51.0", optional = true }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
