
[package]
authors = ["Filip Kunc <kunc.filip@gmail.com>"]
edition = "2024"
name = "wrap_esm_lambda"
version = "0.1.3"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.2.4"
napi-derive = "3.2.4"
oxc = "0.139.0"
oxc_allocator = "0.139.0"
oxc_ast = "0.139.0"
oxc_codegen = "0.139.0"
oxc_parser = "0.139.0"
oxc_semantic = "0.139.0"
oxc_sourcemap = "8.1.1"
oxc_span = "0.139.0"
oxc_str = "0.139.0"
oxc_transformer = "0.139.0"
oxc_traverse = "0.139.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
